Add localization and texture

--- a/src/main/resources/assets/very_bad_snowman/lang/en_us.json
+++ b/src/main/resources/assets/very_bad_snowman/lang/en_us.json
@@ -10,5 +10,6 @@
   "item.very_bad_snowman.snow_crystal_pickaxe": "Snow Crystal Pickaxe",
   "item.very_bad_snowman.snow_crystal_axe": "Snow Crystal Axe",
   "item.very_bad_snowman.snow_crystal_shovel": "Snow Crystal Shovel",
-  "item.very_bad_snowman.snow_crystal_hoe": "Snow Crystal Hoe"
+  "item.very_bad_snowman.snow_crystal_hoe": "Snow Crystal Hoe",
+  "item.very_bad_snowman.spawn_egg_bad_snowman":"Bad Snowman Spawn Egg"
 }
