--- a/src/main/resources/assets/very_bad_snowman/lang/ru_ru.json
+++ b/src/main/resources/assets/very_bad_snowman/lang/ru_ru.json
@@ -10,5 +10,6 @@
   "item.very_bad_snowman.snow_crystal_pickaxe": "Снежно-кристальная Кирка",
   "item.very_bad_snowman.snow_crystal_axe": "Снежно-кристальный Топор",
   "item.very_bad_snowman.snow_crystal_shovel": "Снежно-кристальная Лопата",
-  "item.very_bad_snowman.snow_crystal_hoe": "Снежно-кристальная Мотыга"
+  "item.very_bad_snowman.snow_crystal_hoe": "Снежно-кристальная Мотыга",
+  "item.very_bad_snowman.spawn_egg_bad_snowman":"Яйцо призыва плохого снеговика"
 }
